--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "amigo-secretao",
+  "name": "amigo-secreto-web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
-    "axios": "^0.19.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "axios": "^0.21.4",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
